--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -38,7 +38,7 @@
     {% endif %}
     {% if sidebar.orcid %}
     <li class="telegram"><i class="fa-brands fa-orcid"></i>
-      <a href="https://orcid.org/{{ sidebar.gscholar }}" target="_blank">{{ sidebar.orcid }}</a>
+      <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank">{{ sidebar.orcid }}</a>
     </li>
     {% endif %}
     
