--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -32,12 +32,12 @@
     {% endif %}
 
      {% if sidebar.gscholar %}
-    <li class="telegram"><i class="fa-solid fa-graduation-cap"></i>
+    <li class="telegram"><i class="fas fa-graduation-cap"></i>
       <a href="https://scholar.google.at/citations?user={{ sidebar.gscholar }}" target="_blank">{{ sidebar.gscholar }}</a>
     </li>
     {% endif %}
     {% if sidebar.orcid %}
-    <li class="telegram"><i class="fa-brands fa-orcid"></i>
+    <li class="telegram"><i class="fab fa-orcid"></i>
       <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank">{{ sidebar.orcid }}</a>
     </li>
     {% endif %}
