--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -44,7 +44,7 @@
     
 
     {% if sidebar.website %}
-    <li class="website"><i class="fab earth-europe-solid"></i>
+    <li class="website"><i class="fas globe-africa"></i>
       <a href="http://{{ sidebar.website }}" target="_blank">{{ sidebar.website }}</a>
     </li>
     {% endif %}
