--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -38,13 +38,13 @@
     {% endif %}
     {% if sidebar.orcid %}
     <li class="telegram"><i class="fab fa-orcid"></i>
-      <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank">ORCID: {{ sidebar.orcid }}</a>
+      <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank">    ORCID</a>
     </li>
     {% endif %}
     
 
     {% if sidebar.website %}
-    <li class="website"><i class="fas globe-africa"></i>
+    <li class="website"><i class="fas globe-americas"></i>
       <a href="http://{{ sidebar.website }}" target="_blank">{{ sidebar.website }}</a>
     </li>
     {% endif %}
