--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -37,14 +37,14 @@
     </li>
     {% endif %}
     {% if sidebar.orcid %}
-    <li class="telegram"><i class="fab fa-orcid"></i>
+    <li class="telegram"><i class="fas fa-graduation-cap"></i>
       <a href="https://orcid.org/{{ sidebar.orcid }}" target="_blank">    ORCID</a>
     </li>
     {% endif %}
     
 
     {% if sidebar.website %}
-    <li class="website"><i class="fas globe-americas"></i>
+    <li class="website"><i class="fas fa-globe-americas"></i>
       <a href="http://{{ sidebar.website }}" target="_blank">{{ sidebar.website }}</a>
     </li>
     {% endif %}
