--- a/_includes/education.html
+++ b/_includes/education.html
@@ -11,6 +11,8 @@
     <div class="item">
       <h4 class="degree">{{ graduation.degree }}</h4>
       <h5 class="meta">{{ graduation.university }}</h5>
+      {% if gradiation.link%}
+      <h5 class="meta">{{ graduation.university }}</h5>
       <div class="time">{{ graduation.time }}</div>
     </div><!--//item-->
     {% endfor %}
