--- a/_includes/education.html
+++ b/_includes/education.html
@@ -13,6 +13,7 @@
       <h5 class="meta">{{ graduation.university }}</h5>
       {% if graduation.link%}
       <h5 class="meta"><a href="{{ graduation.link }}" target="_blank">PhD Link</a></h5>
+      {% endif %}
       <div class="time">{{ graduation.time }}</div>
     </div><!--//item-->
     {% endfor %}
