--- a/_includes/education.html
+++ b/_includes/education.html
@@ -12,7 +12,7 @@
       <h4 class="degree">{{ graduation.degree }}</h4>
       <h5 class="meta">{{ graduation.university }}</h5>
       {% if graduation.link%}
-      <h5 class="meta"><a href="{{ graduation.link }}" target="_blank">PhD Link</a></h5>
+      <div class="time"><a href="{{ graduation.link }}" target="_blank">PhD Link</a></div>
       {% endif %}
       <div class="time">{{ graduation.time }}</div>
     </div><!--//item-->
