--- a/_includes/education.html
+++ b/_includes/education.html
@@ -9,11 +9,14 @@
 
     {% for graduation in education.info %}
     <div class="item">
-      <h4 class="degree">{{ graduation.degree }}</h4>
+      <h4 class="degree">
+        {% if graduation.link%}
+        <a href="{{ graduation.link }}" target="_blank">{{ graduation.degree }}</a>
+        {% else %}
+        {{ graduation.degree }}
+        {% endif %}
+      </h4>
       <h5 class="meta">{{ graduation.university }}</h5>
-      {% if graduation.link%}
-      <div class="time"><a href="{{ graduation.link }}" target="_blank">PhD Link</a></div>
-      {% endif %}
       <div class="time">{{ graduation.time }}</div>
     </div><!--//item-->
     {% endfor %}
